[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captrs = "0.3.1"
shuteye = "0.3.3"
yeelight = "0.4.0-rc.1"
tokio = { version = "1.15.0", features = ["full"]}
dotenv = "0.15.0"
rgb2hex = { git = "https://github.com/callmenoodles/rgb2hex" }